--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </header>
 
     <!-- main section  -->
-    <main class="mb-4">
+    <main>
         <!-- service section  -->
         <section class="mb-5">
             <h1 class="text-center fw-bold mb-5">WHAT WE DO??</h1>
@@ -120,7 +120,7 @@
 
         </section>
         <!-- About us section  -->
-        <section class="mb-5 pt-5" style="background-color: rgb(238, 240, 241);">
+        <section class="mb-5 pt-5" style="background-color: rgb(248, 249, 250);">
             <h1 class="text-center fw-bold mb-5">ABOUT US</h1>
 
 
@@ -190,7 +190,7 @@
             </div>
         </section>
         <!-- social link  -->
-        <section class="py-5 " style="background-color: rgb(238, 240, 241);">
+        <section class="py-5 " style="background-color: rgb(248, 249, 250);">
             <h1 class="text-center fw-bold mb-5 pt-5">FIND US ON SOCIAL MEDIA
             </h1>
 
@@ -206,7 +206,7 @@
         </section>
 
         <!-- CONTACT section  -->
-        <section class="pt-5 " style="background-color: F8F9FA;">
+        <section class="pt-5 " style="background-color: rgb(248, 249, 250);">
             <h1 class="text-center fw-bold mb-5 pt-5">CONTACT US
             </h1>
             <div class="container" style=" background-color: F8F9FA;">
